--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Top‑Down Bomb (v7.6 • defender spawn)</title>
+<title>Top‑Down Bomb (v7.7 • mid expansion)</title>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
 <style>
   html,body { height:100%; }
@@ -21,7 +21,7 @@
 <div id="hud"></div>
 <div id="status"></div>
 <div id="overlay"><div id="panel">
-  <h2>Top‑Down Bomb Defusal (v7.6)</h2>
+  <h2>Top‑Down Bomb Defusal (v7.7)</h2>
   <div class="small">Defender spawn • anti‑stuck AI • wide doorways • 10v10 • A/B sites • 90s rounds</div>
   <div class="small">Press <b>D</b> to toggle doorway highlights.</div>
   <br/><button id="startBtn">Start Simulation</button>
