Raise door heights and change door toggle key

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div id="overlay"><div id="panel">
   <h2>Top‑Down Bomb Defusal (v7.7)</h2>
   <div class="small">Defender spawn • anti‑stuck AI • wide doorways • 10v10 • A/B sites • 90s rounds</div>
-  <div class="small">Press <b>D</b> to toggle doorway highlights.</div>
+  <div class="small">Press <b>E</b> to toggle doorway highlights.</div>
   <br/><button id="startBtn">Start Simulation</button>
 </div></div>
 <script src="main.js"></script>
