feat: add anchor slow and smarter rotations

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Top‑Down Bomb (v8.0 • gun visuals)</title>
+<title>Top‑Down Bomb (v8.1 • anchor slowdown)</title>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
 <style>
   html,body { height:100%; }
@@ -28,7 +28,7 @@
  </div>
  <div id="status"></div>
 <div id="overlay"><div id="panel">
-    <h2>Top‑Down Bomb Defusal (v8.0)</h2>
+    <h2>Top‑Down Bomb Defusal (v8.1)</h2>
   <div class="small">Defender spawn • anti‑stuck AI • wide doorways • 5v5 • A/B sites • 90s rounds</div>
   <div class="small">Press <b>E</b> to toggle doorway highlights.</div>
   <br/><button id="startBtn">Start Simulation</button>
